add a new h2 in youssef.html

--- a/youssef.html
+++ b/youssef.html
@@ -6,7 +6,7 @@
     <title>youssef</title>
 </head>
 <body>
-    <h1>hallo world</h1>,
+    <h1>hallo world</h1>
     <h2> this tracks its important for me</h2>
 </body>
 </html>
